# OGL

./: CMakeLists.txt  Dependencies.cmake  ProjectOptions.cmake  README.md  README_building.md  README_dependencies.md
.github/: constants.env
.github/workflows/: auto-clang-format.yml  ci.yml  codeql-analysis.yml
cmake/: CPM.cmake  Cache.cmake  CompilerWarnings.cmake  Cuda.cmake  Doxygen.cmake  Hardening.cmake  InterproceduralOptimization.cmake  LibFuzzer.cmake  Linker.cmake  PackageProject.cmake  PreventInSourceBuilds.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Tests.cmake
configured_files/: config.hpp.in
fuzz_test/: CMakeLists.txt
include/OGL/: App.hpp  EBO.hpp  FPSCounter.hpp  Shader.hpp  Texture.cpp  Texture.hpp  VAO.hpp  VBO.hpp  Window.hpp  headers.hpp  ogl_lib.hpp  sample_library.hpp
include/glad/KHR/: khrplatform.h
include/glad/glad/: glad.h
include/ogl_lib_core/: headersCore.hpp  ogl_lib_core.hpp
include/stb/: stb_image.hpp
shaders/: default.frag  default.vert
src/: CMakeLists.txt
src/ftxui_sample/: CMakeLists.txt  main.cpp
src/glad/: CMakeLists.txt  glad.c
src/ogl/: App.cpp  App.hpp  CMakeLists.txt  Window.cpp  Window.hpp  main.cpp
src/ogl_lib/: App.cpp  CMakeLists.txt  EBO.cpp  FPSCounter.cpp  Shader.cpp  VAO.cpp  VBO.cpp  Window.cpp  ogl_lib.cpp
src/ogl_lib_core/: CMakeLists.txt  ogl_lib_core.cpp
src/sample_library/: CMakeLists.txt  sample_library.cpp
src/stb/: CMakeLists.txt  stb_image.cpp
test/: CMakeLists.txt  constexpr_tests.cpp  tests.cpp  testsConstanst.hpp
